수학_탐구_대회.ipynb

--- a/수학_탐구_대회.ipynb
+++ b/수학_탐구_대회.ipynb
@@ -157,7 +157,7 @@
         "\n",
         "# 프로그램 실행\n",
         "if __name__ == \"__main__\":\n",
-        "    main()-"
+        "    main()"
       ]
     }
   ]
